2007-12-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (haskell-package-conf-file): Don't use `ignore-errors'
	because this form is not byte-compiled :-(.

2007-12-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Release version 2.4.

2007-12-11  Florian Lorenzen  <lorenzen@physik.fu-berlin.de>  (tiny change)

	* haskell-mode.el (haskell-mode-map): Fix last change.

2007-12-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-mode.el (haskell-delete-indentation): New command.
	(haskell-mode-map): Use it.

	* haskell-doc.el (haskell-doc-in-code-p): New function.
	(haskell-doc-show-type): Use it.

	* Makefile (ELFILES): Add haskell-c, haskell-cabal,
	and haskell-simple-indent.

2007-11-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-cabal.el (haskell-cabal-get-setting):
	Handle multi-line settings.

	* inf-haskell.el (inferior-haskell-load-file): Typo.

2007-09-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-cabal.el (haskell-cabal-get-setting): New function.

	* inf-haskell.el (inferior-haskell-find-project-root): Use it.

	* haskell-c.el: New file.

2007-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-load-file): Do reload if prefix arg.

2007-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el (turn-on-haskell-indent): Fix keymap setup code.

2007-09-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-find-project-root): New var, to
	replace inferior-haskell-use-cabal.
	(inferior-haskell-find-project-root): New function.
	(inferior-haskell-load-file): Use them.
	(inferior-haskell-module-alist): Use a temp buffer so as not to write
	out random junk before/after the actual module alist.

2007-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-load-file): Re-add the `reload' arg.
	(inferior-haskell-reload-file): Re-instate the command.
