@@ -1,3 +1,9 @@
+2008-01-17  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* haskell-cabal.el (haskell-cabal-font-lock-keywords): Add rules
+	for `if', `else', `Library', `Flag', and `Executable'.
+	(haskell-cabal-mode): Setup comment variables.
+
 2007-12-12  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* inf-haskell.el (haskell-package-conf-file): Don't use `ignore-errors'
